@startuml
title App View Pipeline - State Diagram

skinparam shadowing false
skinparam linetype ortho
skinparam state {
  FontColor #1F2937
  BorderColor #94A3B8
  BackgroundColor #EDE9FE
}
skinparam note {
  FontColor #1F2937
  BorderColor #94A3B8
  BackgroundColor #FEF3C7
}

legend left
  Outer-layer app views represented as pipeline states.
  Each state note lists the conceptual units active in that view.
endlegend

[*] --> browse : open app

state browse
note right of browse
  Units:
  - QuotationFlow
  - Persistence
end note

state client
note right of client
  Units:
  - QuotationFlow
  - ClientSelection
  - Store
end note

state basket
note right of basket
  Units:
  - QuotationFlow
  - Catalog
  - Category
  - Item (catalog mode)
  - Basket
  - BasketDay
  - Item (basket mode)
  - PricingEngine
  - Store
end note

state validation
note right of validation
  Units:
  - QuotationFlow
  - ValidationSummary
  - Persistence
  - Export
end note

state completed
note right of completed
  Units:
  - QuotationFlow
  - Persistence
end note

browse --> client : start quotation / load path
client --> basket : client selected
basket --> validation : validate quotation
validation --> basket : back to edit
validation --> completed : confirm save
completed --> browse : reset / new quotation

@enduml
